[package]
name = "dedup-backfill"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
fmmap = { version = "0.4.0", features = ["tokio"] }
futures = "0.3.31"
futures-util = "0.3.31"
indicatif = { version = "0.17.11", features = ["tokio"] }
kv = { version = "0.24.0", features = ["json-value"] }
reqwest = "0.12.15"
reqwest-middleware = { version = "0.4.1", features = ["http2", "json"] }
reqwest-retry = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["chrono"] }
spacetimedb-sdk = "1.2.0"
tokio = { version = "1.44.1", features = ["full"] }
yral-spacetime-bindings = { git = "https://github.com/dolr-ai/yral-spacetime", branch = "main", version = "0.1.0" }
